<resources>
    <string name="app_name">GCParkingSpaceFinder</string>
    <string name="main_string">Georgian College\nParking Space Finder</string>
    <string name="submit">SUBMIT</string>
    <string name="areas">Areas</string>
    <string name="submit_space">Submit a space</string>
    <string name="button_second_page2">GO</string>
    <string name="submit_space_land">Or click\non the map</string>
    <string name="explain">Or click on the map</string>
    <string name="area_a">A</string>
    <string name="number">Number</string>
    <string name="zone">Zone</string>
    <string name="leaving">Leaving</string>
    <string name="parking">Parking</string>
    <string name="where_am_i">Where am I? GOOGLE</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="forget_password">Forget password?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="repassword">Repeat password</string>
    <string name="login_page">login page</string>
    <string name="area_b">B</string>
    <string name="area_bb">BB</string>
    <string name="area_bk">BK</string>
    <string name="area_d">D</string>
    <string name="area_f">F</string>
    <string name="area_g">G</string>
    <string name="area_k">K</string>
    <string name="area_m">M</string>
    <string name="area_n">N</string>
    <string name="area_eh">EH</string>
    <string name="go_to_submit">Go to submit page</string>
    <string name="google">   OOGLE</string>
    <string name="email">Email address</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="d">D</string>
    <string name="eh">E/H</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="m">M</string>
    <string name="bk">BK</string>
    <string name="k">K</string>
    <string name="n">N</string>
    <string name="bb">BB</string>
    <string name="back_button">back_button</string>
    <string name="logout_button">logout_button</string>
</resources>