<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FreeAreaActivity">


    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/second_page_background_color" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_size_land"
        android:layout_height="@dimen/logo_size_land"
        android:src="@drawable/second_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/second_page_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/second_page_map"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:adjustViewBounds="true"
        android:layout_marginTop="@dimen/margin5"/>

    <Button
        android:id="@+id/btn_google_maps"
        android:layout_width="@dimen/btn_width200"
        android:layout_height="@dimen/btn_height40"
        android:text="@string/where_am_i"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_page_pic"
        android:layout_marginTop="@dimen/margin10"
        android:textSize="@dimen/btn_width16"
        android:background="@drawable/btn_google_maps_border"
        android:textColor="@color/background_color"/>

    <Button
        android:id="@+id/btn_a"
        android:layout_width="@dimen/btn_width60"
        android:layout_height="@dimen/btn_height60"
        android:text="@string/a"
        app:layout_constraintEnd_toStartOf="@id/btn_b"
        android:layout_marginEnd="@dimen/margin30"
        app:layout_constraintTop_toTopOf="@id/btn_b"
        android:layout_marginBottom="@dimen/margin10"
        android:background="@drawable/button_second_page60"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/second_page_background_color"/>

    <Button
        android:id="@+id/btn_b"
        android:layout_width="@dimen/btn_width60"
        android:layout_height="@dimen/btn_height60"
        android:text="@string/b"
        app:layout_constraintEnd_toEndOf="@id/btn_eh"
        android:layout_marginEnd="@dimen/margin45"
        app:layout_constraintBottom_toTopOf="@id/btn_eh"
        android:layout_marginBottom="@dimen/margin10"
        android:background="@drawable/button_second_page60"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/second_page_background_color"/>

    <Button
        android:id="@+id/btn_bb"
        android:layout_width="@dimen/btn_width60"
        android:layout_height="@dimen/btn_height60"
        android:text="@string/bb"
        app:layout_constraintStart_toStartOf="@id/btn_eh"
        android:layout_marginStart="@dimen/margin45"
        app:layout_constraintBottom_toTopOf="@id/btn_eh"
        android:layout_marginBottom="@dimen/margin10"
        android:background="@drawable/button_second_page60"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/second_page_background_color"/>
    <Button
        android:id="@+id/btn_bk"
        android:layout_width="@dimen/btn_width60"
        android:layout_height="@dimen/btn_height60"
        android:text="@string/bk"
        app:layout_constraintStart_toEndOf="@id/btn_bb"
        android:layout_marginStart="@dimen/margin30"
        app:layout_constraintTop_toTopOf="@id/btn_bb"
        android:layout_marginBottom="@dimen/margin10"
        android:background="@drawable/button_second_page60"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/second_page_background_color"/>

    <Button
        android:id="@+id/btn_d"
        android:layout_width="@dimen/btn_width60"
        android:layout_height="@dimen/btn_height60"
        android:text="@string/d"
        app:layout_constraintEnd_toStartOf="@+id/btn_eh"
        android:layout_marginEnd="@dimen/margin30"
        app:layout_constraintTop_toTopOf="@id/btn_eh"
        android:background="@drawable/button_second_page60"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/second_page_background_color"/>

    <Button
        android:id="@+id/btn_eh"
        android:layout_width="@dimen/btn_width60"
        android:layout_height="@dimen/btn_height60"
        android:text="@string/eh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_google_maps"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_second_page60"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/second_page_background_color"/>

    <Button
        android:id="@+id/btn_f"
        android:layout_width="@dimen/btn_width60"
        android:layout_height="@dimen/btn_height60"
        android:text="@string/f"
        app:layout_constraintStart_toEndOf="@id/btn_eh"
        android:layout_marginStart="@dimen/margin30"
        app:layout_constraintTop_toTopOf="@id/btn_eh"
        android:background="@drawable/button_second_page60"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/second_page_background_color"/>

    <Button
        android:id="@+id/btn_g"
        android:layout_width="@dimen/btn_width60"
        android:layout_height="@dimen/btn_height60"
        android:text="@string/g"
        app:layout_constraintEnd_toStartOf="@id/btn_k"
        android:layout_marginEnd="@dimen/margin30"
        app:layout_constraintTop_toTopOf="@id/btn_k"
        android:background="@drawable/button_second_page60"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/second_page_background_color"/>

    <Button
        android:id="@+id/btn_k"
        android:layout_width="@dimen/btn_width60"
        android:layout_height="@dimen/btn_height60"
        android:text="@string/k"
        app:layout_constraintEnd_toEndOf="@id/btn_eh"
        android:layout_marginEnd="@dimen/margin45"
        app:layout_constraintTop_toBottomOf="@id/btn_eh"
        android:layout_marginTop="@dimen/margin10"
        android:background="@drawable/button_second_page60"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/second_page_background_color"/>

    <Button
    android:id="@+id/btn_m"
    android:layout_width="@dimen/btn_width60"
    android:layout_height="@dimen/btn_height60"
    android:text="@string/m"
    app:layout_constraintStart_toStartOf="@id/btn_eh"
    android:layout_marginStart="@dimen/margin45"
    app:layout_constraintTop_toBottomOf="@id/btn_eh"
    android:layout_marginTop="@dimen/margin10"
    android:background="@drawable/button_second_page60"
    android:textSize="@dimen/btn_text_size"
    android:textColor="@color/second_page_background_color"/>

    <Button
        android:id="@+id/btn_n"
        android:layout_width="@dimen/btn_width60"
        android:layout_height="@dimen/btn_height60"
        android:text="@string/n"
        app:layout_constraintStart_toEndOf="@id/btn_m"
        android:layout_marginStart="@dimen/margin30"
        app:layout_constraintTop_toBottomOf="@id/btn_f"
        android:layout_marginTop="@dimen/margin10"
        android:background="@drawable/button_second_page60"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/second_page_background_color"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin20"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin20"
        app:srcCompat="@drawable/exit"
        app:backgroundTint="@color/background_color"
        app:tint="@color/second_page_background_color"/>

    <Button
        android:id="@+id/back"
        android:layout_width="@dimen/btn_width50"
        android:layout_height="@dimen/btn_height30"
        android:background="@drawable/back_four"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin30"/>

</androidx.constraintlayout.widget.ConstraintLayout>